    when accessing image files on cifs file systems (LP: #609451)
    (thanks Mamoru Tasaka)
  * debian/patches/12_upstream_format_string_hardening.patch:
    Fix format string glitch in xscreensaver-text (LP: #781948)
    (thanks Emanuel Bronshtein)
  * Stop xscreensaver in prerm instead of postrm (Closes: 681613)
    (thanks Filipus Klutiero)

 -- Tormod Volden <debian.tormod@gmail.com>  Sat, 28 Jul 2012 11:25:47 +0200

xscreensaver (5.15-3) unstable; urgency=low

  [ Jose Luis Rivas ]
  * Removed Jose Luis Rivas as maintainer, now the sole maintainer
    is Tormod Volden.

  [ Tormod Volden ]
  * Add -s to gdmflexiserver invocation (Closes: #349000)
  * xscreensaver-data depends on libwww-perl (LP: #971140)
  * Bump Standards-Version to 3.9.3 (no changes needed)

 -- Tormod Volden <debian.tormod@gmail.com>  Sat, 30 Jun 2012 17:24:51 +0200

xscreensaver (5.15-2) unstable; urgency=low

  * Build-dep on libjpeg-dev instead of libjpeg62-dev (Closes: #647110)

 -- Tormod Volden <debian.tormod@gmail.com>  Sun, 30 Oct 2011 18:08:37 +0100

xscreensaver (5.15-1) unstable; urgency=low

  [ Tormod Volden ]
  * New upstream version 5.15
    - New hacks: hilbert, companioncube and tronbit
    - Turned on LC_CTYPE on Linux (LP: #671923)
  * debian/rules: Add build-arch and build-indep targets

  [ Jose Luis Rivas ]
  * postrm: Kill xscreensaver after removal (Closes: #558024)

 -- Tormod Volden <debian.tormod@gmail.com>  Thu, 06 Oct 2011 23:12:30 +0200

xscreensaver (5.14-1) unstable; urgency=low

  [ Tormod Volden ]
  * New upstream version 5.14
    - Fixed crash in Blank Only Mode when DPMS disabled.
      (Closes: #627382, #627397)
    - Added ``Quick Power-off in Blank Only Mode'' option.
    - BSOD GLaDOS. 
  * Clean up duplicate build-depends (thanks Jeremy Bicha)
  * Drop xli | xloadimage recommends (we use gdk-pixbuf)

 -- Jose Luis Rivas <ghostbar@debian.org>  Sun, 22 May 2011 23:12:59 -0430

xscreensaver (5.13-1) unstable; urgency=low

  * New upstream version 5.13