@@ -6,7 +6,9 @@ in /usr/share/xscreensaver called xscreensaver-daemon.desktop
 
 If you want XScreenSaver to autostart in your sessions just copy it
 to ~/.config/autostart , or if you want it for all users copy it
-to /etc/xdg/autostart .
+to /etc/xdg/autostart . If you don't need to modify it, consider
+soft-linking it instead of copying, so that future improvements will
+take effect automatically.
 
 The use of a NotShowIn option can be useful if you install the desktop
 file globally but have several desktop environments installed.
@@ -19,3 +21,8 @@ KDE sessions.
 If you use xscreensaver in other xdg-compliant environments
 but gnome-screensaver and kscreensaver for Gnome and KDE, using
 NoShowIn=KDE;GNOME; might suit your purpose.
+
+Note that the example desktop file does not start the daemon directly
+but via a wrapper script. This wrapper is intended to set the
+newLoginCommand resource correctly depending on the current
+environment.
