@@ -3,7 +3,8 @@ Type=Application
 Encoding=UTF-8
 Name=XScreensaver
 TryExec=xscreensaver
-Exec=xscreensaver -nosplash
+Exec=/usr/share/xscreensaver/xscreensaver-wrapper.sh -nosplash
 NoDisplay=true
+X-KDE-StartupNotify=false
 # NotShowIn=KDE;GNOME;
 Comment=The XScreensaver daemon
